--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#CDC0B0" />
+  <meta name="theme-color" content="#363636" />
   <meta name="description" content="Plan.G for every CS CMU student" />
   <link rel="apple-touch-icon" href="logo192.png" />
   <!--
